// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="boxed-group boxed-group-inner js-profile-changelog"
>
  <div
    className="spacer-bottom"
  >
    <ChangelogSearch
      dateRange={
        {
          "from": undefined,
          "to": undefined,
        }
      }
      onDateRangeChange={[Function]}
      onReset={[Function]}
    />
    <DeferredSpinner
      className="spacer-left"
      loading={false}
    />
  </div>
  <Changelog
    events={
      [
        {
          "action": "ACTIVATED",
          "date": "2019-04-23T02:12:32+0100",
          "params": {
            "severity": "MAJOR",
          },
          "ruleKey": "rule-key",
          "ruleName": "rule-name",
        },
        {
          "action": "ACTIVATED",
          "date": "2019-04-23T02:12:32+0100",
          "params": {
            "severity": "MAJOR",
          },
          "ruleKey": "rule-key",
          "ruleName": "rule-name",
        },
        {
          "action": "ACTIVATED",
          "date": "2019-04-23T02:12:32+0100",
          "params": {
            "severity": "MAJOR",
          },
          "ruleKey": "rule-key",
          "ruleName": "rule-name",
        },
      ]
    }
  />
  <footer
    className="text-center spacer-top small"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      show_more
    </a>
  </footer>
</div>
`;

exports[`should render correctly without events 1`] = `
<div
  className="boxed-group boxed-group-inner js-profile-changelog"
>
  <div
    className="spacer-bottom"
  >
    <ChangelogSearch
      dateRange={
        {
          "from": undefined,
          "to": undefined,
        }
      }
      onDateRangeChange={[Function]}
      onReset={[Function]}
    />
    <DeferredSpinner
      className="spacer-left"
      loading={false}
    />
  </div>
  <ChangelogEmpty />
</div>
`;
